# pub2json

./: .gitignore  Cargo.toml  dist-workspace.toml  schema.json
src/: main.rs
