[package]
name = "eopub2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
serde = "^1.0.189"
serde_json = "1.0"
eo = { git = "https://github.com/sorokya/eo", features = ["use_serde", "generate_protocol"] }
clap = { version = "4.4.6", features = ["derive"] }

