[package]
name = "eopub2json"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/sorokya/pub2json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
bytes = "1.0"
serde = "^1.0.189"
serde_json = "1.0"
eolib = { version = "3", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
crc = "3.4"
glob = "0.3.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
